<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.ujosue.uapp.activity.Detalles">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:id="@+id/ivFotoDetalles"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/tvNombreDetalles"
        android:layout_alignTop="@+id/ivFotoDetalles"
        android:layout_toRightOf="@+id/ivFotoDetalles"
        android:layout_toEndOf="@+id/ivFotoDetalles" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/tvPrecioDetalles"
        android:layout_below="@+id/tvNombreDetalles"
        android:layout_toRightOf="@+id/ivFotoDetalles"
        android:layout_toEndOf="@+id/ivFotoDetalles" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/tvDescripcionDetalles"
        android:layout_below="@+id/tvPrecioDetalles"
        android:layout_toRightOf="@+id/ivFotoDetalles"
        android:layout_toEndOf="@+id/ivFotoDetalles" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etCantidadDetalles"
        android:layout_below="@+id/tvDescripcionDetalles"
        android:layout_alignLeft="@+id/tvDescripcionDetalles"
        android:layout_alignStart="@+id/tvDescripcionDetalles"
        android:layout_alignRight="@+id/tvPrecioDetalles"
        android:layout_alignEnd="@+id/tvPrecioDetalles" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnMasDetalles"
        android:layout_alignTop="@+id/etCantidadDetalles"
        android:layout_toRightOf="@+id/etCantidadDetalles"
        android:text="@string/signMas" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/signMin"
        android:id="@+id/btnMinDetalles"
        android:layout_alignTop="@+id/btnMasDetalles"
        android:layout_toRightOf="@+id/btnMasDetalles"
        android:layout_toEndOf="@+id/btnMasDetalles" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comprar"
        android:id="@+id/btnComprarDetalles"
        android:layout_below="@+id/btnMasDetalles"
        android:layout_alignLeft="@+id/etCantidadDetalles"
        android:layout_alignStart="@+id/etCantidadDetalles" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/tvTotalDetalles"
        android:layout_below="@+id/btnComprarDetalles"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
